deployment/kubernetes/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: roip-production
  labels:
    name: roip-production
    environment: production
